# 2025_cpmeasure

./: Makefile  appendix.tex  bibliography.bib  draft.org  draft.tex  export_files.org  flake.nix  header.tex  main.tex  readme.md  readme.org
datasets_management/: metadata.json  upload_dir.sh
src/: flake.nix  pyproject.toml  readme.md  readme.org
src/astro3d/: get_figures.py  plot_figures.py  util_plot.py
src/axon3d/: get_figure.py  get_profiles.py
src/jump/: compare_cps.py  explore_cellprof_data.py  fetch_sample_subset.py  get_profiles_from_masks.py  get_profiles_via_segmentation.py  original_selection.csv  parse_features.py  plot_cp_vs_cpm.py  readme.org  upload_databases.sh  upload_to_zenodo.sh  util_names.py  utils.py
src/overview/: overview_pull_images.py  plot_overview.py
style/: header.tex
