[project]
name = "cp_measure_codeml"
version = "0.1.0"
description = "Code to reproduce figures for submission."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cellpose>=4.0.2",
    "cp-measure>=0.1.10",
    "duckdb>=1.2.2",
    "joblib>=1.5.0",
    "jump-portrait>=0.0.27",
    "jupyter>=1.1.1",
    "pillow>=11.2.1",
    "polars>=1.29.0",
    "polars-ds>=0.8.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]
